@@ -4,7 +4,7 @@
  *
  * This file contains code for the Memoserv READ function
  *
- * $Id: read.c 2797 2005-10-09 01:00:31Z nenolod $
+ * $Id: read.c 3335 2005-10-31 03:48:14Z nenolod $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"memoserv/read", FALSE, _modinit, _moddeinit,
-	"$Id: read.c 2797 2005-10-09 01:00:31Z nenolod $",
+	"$Id: read.c 3335 2005-10-31 03:48:14Z nenolod $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -46,7 +46,7 @@ static void ms_cmd_read(char *origin)
 	myuser_t *mu = u->myuser, *tmu;
 	mymemo_t *memo, *receipt;
 	node_t *n;
-	int i = 1, memonum = 0;
+	uint32_t i = 1, memonum = 0;
 	char strfbuf[32];
 	struct tm tm;
 	
